<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:layout_centerInParent="false"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/textViewDaftar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/primarycolour"
            android:fontFamily="@font/inter_black"
            android:textSize="40sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textViewGreeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/kata_login"
            android:textSize="14sp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginTop="8dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginTop="8dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            app:passwordToggleEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonLogin"
            android:backgroundTint="@color/primarycolour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/inter_black"
            android:text="@string/masuk"/>

        <TextView
            android:padding="10dp"
            android:fontFamily="@font/inter_regular"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atau_masuk_dengan"
            />

<!--        <androidx.cardview.widget.CardView-->
<!--            android:id="@+id/cardViewGoogle"-->
<!--            app:cardElevation="5dp"-->
<!--            app:cardCornerRadius="50dp"-->
<!--            app:contentPadding="10dp"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_width="200dp"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:layout_height="50dp">-->

<!--            <ImageView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:src="@drawable/google_logo"-->
<!--                android:layout_gravity="center" />-->

<!--        </androidx.cardview.widget.CardView>-->

        <TextView
            android:id="@+id/textViewDaftarDisini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/belum_punya_akun"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/textbelumpunyaakun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daftar_disini"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_gravity="center"/>

    </LinearLayout>
</RelativeLayout>
