<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Profile.Profile">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_profile"
        android:layout_width="350dp"
        android:layout_height="100dp"
        app:cardCornerRadius="12dp"
        android:elevation="12dp"
        android:backgroundTint="@color/primarycolour"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.103">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/add_photo"
            android:src="@drawable/baseline_add_a_photo_24"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_width="70dp"
            android:layout_height="70dp" />

        <TextView
            android:id="@+id/tv_name_user"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/nama_user"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/inter_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="Biodata"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_profile"
        app:layout_constraintVertical_bias="0.057" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.357"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.053">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:text="@string/username"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/inter_black"
            android:text="@string/nama_user"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:text="@string/email"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_black"
            android:text="@string/email_user"
            android:textSize="16sp" />



        <TextView
            android:id="@+id/txt_keluar"
            android:layout_marginTop="240dp"
            android:textColor="@color/red"
            android:fontFamily="@font/inter_bold"
            android:text="Keluar"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_edit"
        android:backgroundTint="@color/primarycolour"
        android:src="@drawable/baseline_edit_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.834" />
</androidx.constraintlayout.widget.ConstraintLayout>